# server/pkg/agreement/domain/repository.go
@@ -6,7 +6,7 @@ import (
 )
 
 type Repository interface {
-	Add(ctx context.Context, realState *Agreement) error
+	Add(ctx context.Context, agreement *Agreement) error
 	FindById(ctx context.Context, uuid types.UUID) (*Agreement, error)
 	FindByLandReference(ctx context.Context, landReference string) (*Agreement, error)
 	FindByLandlordOrTenant(ctx context.Context, userUUID types.UUID) ([]Agreement, error)
