# server/pkg/real_state/real_state_list/handler.go
@@ -32,7 +32,7 @@ type ResponseWrapper struct {
 	Payload []ListRealState `json:"body"`
 }
 
-// 	Register swagger:route GET /real-state/:landReference realState list-real-state
+// 	List swagger:route GET /real-state/:landReference RealState list-real-state
 //
 // 	Returns the details of the searched LandReference for the owner in the system.
 //
@@ -59,7 +59,7 @@ func (h *listHandler) FindOne(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(response)
 }
 
-// 	List swagger:route GET /real-state/ RealState list-real-states
+// 	List swagger:route GET /real-state RealState list-real-states
 //
 // 	Returns the existing real states for the owner in the system.
 //
